--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
-    "react-router-dom": "^6.20.1"
+    "react-image-size": "^2.3.2",
+    "react-photo-album": "^2.3.0",
+    "react-router-dom": "^6.20.1",
+    "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.5",
