made profile views dynamic based on urlString present in url

--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.12.1",
     "antd-img-crop": "^4.18.0",
     "axios": "^1.6.2",
     "bootstrap": "^4.3.1",
+    "country-state-city": "^3.2.1",
     "dayjs": "^1.11.10",
     "nookies": "^2.5.2",
     "protoscript": "^0.0.20",
@@ -62,6 +65,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
     "prettier": "3.1.0",
+    "react-easy-edit": "^1.17.2",
     "sass": "^1.69.5",
     "typescript": "^5.3.2",
     "vite": "^5.0.6",
