refactored repository for redux inclusion

--- a/package.json
+++ b/package.json
@@ -1,74 +1,37 @@
 {
-  "name": "reactjs-auth-boilerplate",
-  "version": "2.0.2",
-  "type": "module",
+  "name": "lets-learn-redux-toolkit",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
-    "lint:fix": "npm run lint -- --fix",
-    "typecheck": "node scripts/typeCheckStaged.js",
-    "test": "jest --maxWorkers=50%",
-    "test:watch": "jest --watch --maxWorkers=25%",
-    "test:ci": "jest --runInBand",
-    "coverage-test": "jest --coverage --maxWorkers=50%",
-    "coverage-test:watch": "jest --coverage --watch --maxWorkers=25%",
-    "postinstall": "husky install",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "src/**/*": [
-      "npm run typecheck",
-      "npm run lint",
-      "npm test"
-    ]
+    "serve": "vite preview"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "antd": "^5.12.1",
+    "@reduxjs/toolkit": "^2.0.1",
+    "antd": "^5.12.5",
     "antd-img-crop": "^4.18.0",
-    "axios": "^1.6.2",
-    "bootstrap": "^4.3.1",
-    "country-state-city": "^3.2.1",
-    "dayjs": "^1.11.10",
+    "axios": "^0.21.1",
     "nookies": "^2.5.2",
-    "protoscript": "^0.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
+    "react-easy-edit": "^1.17.2",
+    "react-error-boundary": "^4.0.12",
     "react-image-size": "^2.3.2",
     "react-photo-album": "^2.3.0",
-    "react-router-dom": "^6.20.1",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^6.21.1",
     "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.5",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.11",
-    "@types/react": "^18.2.40",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.0",
-    "prettier": "3.1.0",
-    "react-easy-edit": "^1.17.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "sass": "^1.69.5",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.6",
+    "typescript": "^4.1.2",
+    "vite": "^4.2.0",
     "vite-plugin-environment": "^1.1.3"
   }
 }
