--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-photo-album": "^2.3.0",
     "react-redux": "^7.2.9",
     "react-router-dom": "^6.21.1",
+    "socket.io-client": "^4.7.3",
     "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "sass": "^1.69.5",
