--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@socket.io/component-emitter": "^3.1.0",
     "antd": "^5.12.5",
     "antd-img-crop": "^4.18.0",
     "axios": "^0.21.1",
@@ -23,13 +24,14 @@
     "react-photo-album": "^2.3.0",
     "react-redux": "^7.2.9",
     "react-router-dom": "^6.21.1",
-    "socket.io-client": "^4.7.3",
+    "react-scroll": "^1.9.0",
+    "socket.io-client": "^4.7.4",
     "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/socket.io-client": "^3.0.0",
+    "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "sass": "^1.69.5",
