--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
+    "dev:debug": "vite -d",
     "build": "tsc && vite build",
     "start": "vite",
     "serve": "vite preview"
@@ -24,6 +25,7 @@
     "react-photo-album": "^2.3.0",
     "react-redux": "^7.2.9",
     "react-router-dom": "^6.21.1",
+    "react-router-typesafe": "^1.4.4",
     "react-scroll": "^1.9.0",
     "socket.io-client": "^4.7.4",
     "yet-another-react-lightbox": "^3.15.6"
