--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@rajesh896/video-thumbnails-generator": "^2.3.9",
     "@reduxjs/toolkit": "^2.0.1",
     "@socket.io/component-emitter": "^3.1.0",
     "antd": "^5.12.5",
@@ -23,8 +24,9 @@
     "react-error-boundary": "^4.0.12",
     "react-image-size": "^2.3.2",
     "react-photo-album": "^2.3.0",
+    "react-player": "^2.14.1",
     "react-redux": "^7.2.9",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.21.2",
     "react-router-typesafe": "^1.4.4",
     "react-scroll": "^1.9.0",
     "socket.io-client": "^4.7.4",
